[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=61.2",
]

[project]
authors = [
    { email = "christian.ledermann@gmail.com", name = "Christian Ledermann" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "typer",
]
description = "Create a __repr__ for your python classes from the definition found in __init__"
keywords = [
    "__repr__",
    "cli",
    "code generator",
    "introspection",
]
name = "crepr"
requires-python = ">=3.12"
version = "0.0.1"

[project.license]
text = "MIT"

[project.optional-dependencies]
complexity = [
    "lizard",
    "radon",
]
dev = [
    "crepr[complexity]",
    "crepr[linting]",
    "crepr[tests]",
    "crepr[typing]",
    "pre-commit",
]
linting = [
    "black",
    "flake8",
    "flake8-cognitive-complexity",
    "flake8-comments",
    "flake8-complex-f-strings",
    "flake8-continuation",
    "flake8-docstrings",
    "flake8-dunder-all",
    "flake8-encodings",
    "flake8-expression-complexity",
    "flake8-function-order",
    "flake8-pep3101",
    "flake8-string-format",
    "flake8-super",
    "flake8-typing-imports",
    "flake8-use-fstring",
    "ruff",
    "yamllint",
]
tests = [
    "pytest",
    "pytest-cov",
]
typing = [
    "mypy",
]

[project.readme]
content-type = "text/markdown"
file = "README.md"

[project.scripts]
crepr = "crepr.crepr:app"

[project.urls]
Homepage = "https://github.com/cleder/crepr/"

[tool.flake8]
max_line_length = 88

[tool.isort]
force_single_line = true
line_length = 88

[tool.mypy]
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
enable_error_code = [
    "ignore-without-code",
]
ignore_errors = false
ignore_missing_imports = false
implicit_reexport = false
no_implicit_optional = true
overrides = [
    { disallow_untyped_defs = false, ignore_errors = true, module = "tests.*" },
]
show_error_codes = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.ruff]
fix = true
ignore = [
    "ANN101",
    "ANN102",
    "D203",
    "D212",
    "FA100",
]
select = [
    "A",
    "AIR",
    "ANN",
    "ARG",
    "ASYNC",
    "B",
    "BLE",
    "C4",
    "C90",
    "COM",
    "CPY",
    "D",
    "DJ",
    "DTZ",
    "E",
    "EM",
    "ERA",
    "EXE",
    "F",
    "FA",
    "FBT",
    "FIX",
    "FLY",
    "FURB",
    "G",
    "I",
    "ICN",
    "INP",
    "INT",
    "ISC",
    "LOG",
    "N",
    "NPY",
    "PD",
    "PERF",
    "PGH",
    "PIE",
    "PL",
    "PT",
    "PTH",
    "PYI",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "S",
    "SIM",
    "SLF",
    "SLOT",
    "T10",
    "T20",
    "TCH",
    "TD",
    "TID",
    "TRY",
    "UP",
    "W",
    "YTT",
]
target-version = "py312"

[tool.ruff.isort]
force-single-line = true

[tool.ruff.per-file-ignores]
"tests/*.py" = [
    "PLR2004",
    "S101",
    "SLF001",
]
